--- a/AdvancedDevSample.Infrastructure/AdvancedDevSample.Infrastructure.csproj
+++ b/AdvancedDevSample.Infrastructure/AdvancedDevSample.Infrastructure.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AdvancedDevSampleDomain\AdvancedDevSample.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ExternalServices\" />
+    <Folder Include="Repositories\" />
+    <Folder Include="Persistance\" />
+  </ItemGroup>
+
 </Project>
