--- a/AdvancedDevSampleDomain/AdvancedDevSample.Domain.csproj
+++ b/AdvancedDevSampleDomain/AdvancedDevSample.Domain.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\" />
+    <Folder Include="Execptions\" />
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
 </Project>
