--- a/AdvancedDevSample.Test/AdvancedDevSample.Test.csproj
+++ b/AdvancedDevSample.Test/AdvancedDevSample.Test.csproj
@@ -23,4 +23,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Application\Fakes\" />
+  </ItemGroup>
+
 </Project>
