--- a/AdvancedDevSample.Test/AdvancedDevSample.Test.csproj
+++ b/AdvancedDevSample.Test/AdvancedDevSample.Test.csproj
@@ -1,21 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.4" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
-    <PackageReference Include="xunit" Version="2.9.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4" />
+    <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="FluentAssertions" Version="8.8.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="xunit" Version="2.6.6" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.6" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AdvancedDevSample.Api\AdvancedDevSample.Api.csproj" />
     <ProjectReference Include="..\AdvancedDevSample.Application\AdvancedDevSample.Application.csproj" />
+    <ProjectReference Include="..\AdvancedDevSample.Infrastructure\AdvancedDevSample.Infrastructure.csproj" />
     <ProjectReference Include="..\AdvancedDevSampleDomain\AdvancedDevSample.Domain.csproj" />
   </ItemGroup>
 
@@ -24,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="API\" />
     <Folder Include="Application\Fakes\" />
   </ItemGroup>
 
