--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,9 @@ site_url: https://syhard87.github.io/AdvancedDevSample/
 repo_url: https://github.com/Syhard87/AdvancedDevSample
 repo_name: Syhard87/AdvancedDevSample
 
+# Fixe les erreurs 404 sur GitHub Pages
+use_directory_urls: false
+
 theme:
   name: material
   palette:
@@ -23,7 +26,7 @@ theme:
     - navigation.tabs
     - navigation.sections
 
-# Activation des diagrammes Mermaid
+# Configuration pour Mermaid et Highlight
 markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
