--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,6 +24,33 @@ jobs:
             - name: Lancer les Tests
               run: dotnet test --no-build --verbosity normal
 
+    sonar-analyze:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+              with:
+                  fetch-depth: 0
+            - name: Set up JDK 17
+              uses: actions/setup-java@v4
+              with:
+                  java-version: 17
+                  distribution: "zulu"
+            - name: Setup .NET
+              uses: actions/setup-dotnet@v4
+              with:
+                  dotnet-version: 8.0.x
+            - name: Install SonarQube Cloud scanner
+              run: |
+                  dotnet tool install --global dotnet-sonarscanner
+            - name: Build and analyze
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+              run: |
+                  dotnet-sonarscanner begin /k:"Syhard87_AdvancedDevSample" /o:"syhard87" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+                  dotnet build
+                  dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+
     deploy-docs:
         needs: build-and-test
         if: github.ref == 'refs/heads/main'
