--- a/AdvancedDevSample.Application/AdvancedDevSample.Application.csproj
+++ b/AdvancedDevSample.Application/AdvancedDevSample.Application.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
+  </ItemGroup>
+
 </Project>
